--- a/contatooh/app/views/index.ejs
+++ b/contatooh/app/views/index.ejs
@@ -5,6 +5,6 @@
     <title>Bem-vindo</title>
 </head>
 <body>
-    <h1>Bem-vindo ao Contatooh</h1>
+    <h1>Bem-vindo ao <%=nome %></h1>
 </body>
 </html>
