--- a/contatooh/public/partials/contatos.html
+++ b/contatooh/public/partials/contatos.html
@@ -1,11 +1,11 @@
 <div class="jumbotron">
     <h1 class="text-center">Bem-vindo ao Contatooh</h1>
 </div>
-<button class="btn btn-primary" ng-click="incrementa()">
+<button class="btn btn-primary">
     Novo
 </button>
 <input type="search" ng-model="filtro" placeholder="parte do nome">
-<p>Contatos cadastrados: {{total}}</p>
+<p>Contatos cadastrados: {{contatos.length}}</p>
 <div class="table table-responsive">
     <table class="table table-hover">
         <tr>
