--- a/contatooh/public/partials/contatos.html
+++ b/contatooh/public/partials/contatos.html
@@ -1,11 +1,12 @@
 <div class="jumbotron">
     <h1 class="text-center">Bem-vindo ao Contatooh</h1>
 </div>
-<button class="btn btn-primary">
-    Novo
-</button>
+<a ng-href="#/contato" class="btn btn-primary">
+    Novo Contato
+</a>
 <input type="search" ng-model="filtro" placeholder="parte do nome">
-<p>Contatos cadastrados: {{contatos.length}}</p>
+<p class="text-info" ng-show="contatos.length">Contatos cadastrados: {{contatos.length}}</p>
+<p class="text-info" ng-hide="contatos.length">Não há contatos cadastrados</p>
 <div class="table table-responsive">
     <table class="table table-hover">
         <tr>
@@ -15,13 +16,14 @@
         </tr>
         <tr ng-repeat="contato in contatos | filter: filtro">
             <td>
-                <a>{{contato.nome}}</a>
+                <a ng-href="#/contato/{{contato._id}}">{{contato.nome}}</a>
             </td>
             <td>{{contato.email}}</td>
             <td class="text-center">
                 <button class="btn
-                    btn-warning">Remover</button>
+                    btn-warning" ng-click="remove(contato)">Remover</button>
             </td>
         </tr>
     </table>
 </div>
+<p ng-show="mensagem.texto">{{mensagem.texto}}</p>
