--- a/contatooh/public/partials/contatos.html
+++ b/contatooh/public/partials/contatos.html
@@ -21,7 +21,7 @@
             <td>{{contato.email}}</td>
             <td class="text-center">
                 <button class="btn
-                    btn-warning" ng-click="remove(contato)">Remover</button>
+                    btn-warning" ng-click="remove(contato)">Remover Contato</button>
             </td>
         </tr>
     </table>
