--- a/contatooh/public/partials/contatos.html
+++ b/contatooh/public/partials/contatos.html
@@ -12,6 +12,7 @@
         <tr>
             <th>Nome</th> 
             <th>E-mail</th> 
+            <th>Emergência</th> 
             <th class="text-center">Ação</th> 
         </tr>
         <tr ng-repeat="contato in contatos | filter: filtro">
@@ -19,6 +20,7 @@
                 <a ng-href="#/contato/{{contato._id}}">{{contato.nome}}</a>
             </td>
             <td>{{contato.email}}</td>
+            <td>{{contato.emergencia.nome}}</td>
             <td class="text-center">
                 <button class="btn
                     btn-warning" ng-click="remove(contato)">Remover Contato</button>
